# james_vs_borrow_checker

./: .gitignore  Cargo.toml  README.md  cargo.toml
E0507_cannot_move_out_of_which_is_behind_a_mutable_reference/: Cargo.toml  README.md
E0507_cannot_move_out_of_which_is_behind_a_mutable_reference/src/: main.rs
E0515_cannot_return_value_referencing_temporary_value/: Cargo.toml  README.md
E0515_cannot_return_value_referencing_temporary_value/src/: main.rs
E0521_borrowed_data_escapes_outside_of_function/: Cargo.toml  README.md
E0521_borrowed_data_escapes_outside_of_function/src/: main.rs
E0597_copied_value_does_not_live_long_enough/: Cargo.toml  README.md
E0597_copied_value_does_not_live_long_enough/src/: main.rs
E0726_implicit_elided_lifetime_not_allowed_here/: Cargo.toml  README.md
E0726_implicit_elided_lifetime_not_allowed_here/src/: main.rs
src/: main.rs
