[package]
name = "E0521_borrowed_data_escapes_outside_of_function"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
